feat(outputs): add new outputs `removed-pull-requests-labels-count` and `pull-requests-labels-count`
Closes #858.

--- a/documentation/docs/04-all-outputs.mdx
+++ b/documentation/docs/04-all-outputs.mdx
@@ -21,7 +21,7 @@ The list of all the outputs.
 | [already-stale-issues-count](issues/outputs/already-stale-issues-count-output)                                    | The number of issues processed which were already stale.                           | `number` |
 | [remove-stale-issues-count](issues/outputs/remove-stale-issues-count-output)                                      | The number of issues from where the stale state was removed.                       | `number` |
 | [close-issues-count](issues/outputs/close-issues-count-output)                                                    | The number of issues closed.                                                       | `number` |
-| [issues-comments-count](issues/outputs/issues-comments-count-output)                                              | The number of issues labels mutated (added or removed).                            | `number` |
+| [issues-comments-count](issues/outputs/issues-comments-count-output)                                              | The number of mutated issues labels (added or removed).                            | `number` |
 | [added-issues-comments-count](issues/outputs/added-issues-comments-count-output)                                  | The number of added issues comments.                                               | `number` |
 | [removed-issues-comments-count](issues/outputs/removed-issues-comments-count-output)                              | The number of removed issues comments.                                             | `number` |
 | [added-issues-labels-count](issues/outputs/added-issues-labels-count-output)                                      | The number of added issues labels.                                                 | `number` |
@@ -37,7 +37,9 @@ The list of all the outputs.
 | [close-pull-requests-count](pull-requests/outputs/close-pull-requests-count-output)                               | The number of pull requests closed.                                                | `number` |
 | [deleted-pull-requests-branches-count](pull-requests/outputs/deleted-pull-requests-branches-count-output)         | The number of deleted pull requests branches closed.                               | `number` |
 | [added-pull-requests-comments-count](pull-requests/outputs/added-pull-requests-comments-count-output)             | The number of added pull requests comments.                                        | `number` |
+| [pull-requests-labels-count](pull-requests/outputs/pull-requests-labels-count-output)                             | The number of mutated pull requests labels (added or removed).                     | `number` |
 | [added-pull-requests-labels-count](pull-requests/outputs/added-pull-requests-labels-count-output)                 | The number of added pull requests labels.                                          | `number` |
+| [removed-pull-requests-labels-count](pull-requests/outputs/removed-pull-requests-labels-count-output)             | The number of removed pull requests labels.                                        | `number` |
 | [draft-pull-requests-count](pull-requests/outputs/draft-pull-requests-count-output)                               | The number of pull requests converted to draft.                                    | `number` |
 | [called-api-pull-requests-count](pull-requests/outputs/called-api-pull-requests-count-output)                     | The number of GitHub API calls performed for the pull requests.                    | `number` |
 | [called-api-pull-requests-queries-count](pull-requests/outputs/called-api-pull-requests-queries-count-output)     | The number of GitHub API queries calls performed for the pull requests.            | `number` |
