--- a/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/06-issues/02-outputs/01-all-outputs.mdx
@@ -20,7 +20,7 @@ The list of all issues the outputs.
 | [remove-stale-issues-count](remove-stale-issues-count-output)                 | The number of issues from where the stale state was removed.                | `number` |
 | [close-issues-count](close-issues-count-output)                               | The number of issues closed.                                                | `number` |
 | [added-issues-comments-count](added-issues-comments-count-output)             | The number of added issues comments.                                        | `number` |
-| [issues-labels-count](issues-labels-count-output)                             | The number of issues labels mutated (added or removed).                     | `number` |
+| [issues-labels-count](issues-labels-count-output)                             | The number of mutated issues labels (added or removed).                     | `number` |
 | [added-issues-labels-count](added-issues-labels-count-output)                 | The number of added issues labels.                                          | `number` |
 | [removed-issues-labels-count](removed-issues-labels-count-output)             | The number of removed issues labels.                                        | `number` |
 | [called-api-issues-count](called-api-issues-count-output)                     | The number of GitHub API calls performed for the issues.                    | `number` |
