--- a/documentation/docs/06-issues/02-outputs/10-issues-labels-count-output.mdx
+++ b/documentation/docs/06-issues/02-outputs/10-issues-labels-count-output.mdx
@@ -16,7 +16,7 @@ Type: `number`
 
 ### Description {#description}
 
-This output will expose the number of issues labels mutated (added or removed).
+This output will expose the number of mutated issues labels (added or removed).
 
 ### Example {#example}
 
