--- a/documentation/docs/08-pull-requests/01-inputs/74-to-draft-instead-of-stale-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/74-to-draft-instead-of-stale-input.mdx
@@ -23,7 +23,7 @@ This can be useful when you are sure that all your pull requests are useful and 
 
 :::info
 
-When converting to draft, the inputs [stale comment](pull-request-stale-comment-input) and [add labels after stale](pull-request-add-labels-after-stale-input) will not be performed.
+When converting to draft, the inputs [stale comment](pull-request-stale-comment-input), [add labels after stale](pull-request-add-labels-after-stale-input) and [remove labels after stale](pull-request-remove-labels-after-stale-input) will not be performed.
 
 :::
 
