--- a/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
+++ b/documentation/docs/08-pull-requests/02-outputs/01-all-outputs.mdx
@@ -21,7 +21,9 @@ The list of all pull requests the outputs.
 | [close-pull-requests-count](close-pull-requests-count-output)                               | The number of pull requests closed.                                                | `number` |
 | [deleted-pull-requests-branches-count](deleted-pull-requests-branches-count-output)         | The number of deleted pull requests branches closed.                               | `number` |
 | [added-pull-requests-comments-count](added-pull-requests-comments-count-output)             | The number of added pull requests comments.                                        | `number` |
+| [pull-requests-labels-count](pull-requests-labels-count-output)                             | The number of mutated pull requests labels (added or removed).                     | `number` |
 | [added-pull-requests-labels-count](added-pull-requests-labels-count-output)                 | The number of added pull requests labels.                                          | `number` |
+| [removed-pull-requests-labels-count](removed-pull-requests-labels-count-output)             | The number of removed pull requests labels.                                        | `number` |
 | [draft-pull-requests-count](draft-pull-requests-count-output)                               | The number of pull requests converted to draft.                                    | `number` |
 | [called-api-pull-requests-count](called-api-pull-requests-count-output)                     | The number of GitHub API calls performed for the pull requests.                    | `number` |
 | [called-api-pull-requests-queries-count](called-api-pull-requests-queries-count-output)     | The number of GitHub API queries calls performed for the pull requests.            | `number` |
