feat(prs): add new input `pull-request-remove-labels-after-stale`
This new input will let you remove some label(s) when the stale occur on pull requests.
Closes #858.

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -79,6 +79,7 @@ The list of all the inputs.
 | [pull-request-processing](pull-requests/inputs/pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`                |
 | [pull-request-close-reason](pull-requests/inputs/pull-request-close-reason-input)                               | The reason when closing a pull request (`completed` or `not planned`).                                                                                 | `not planned`         |
 | [pull-request-add-labels-after-stale](pull-requests/inputs/pull-request-add-labels-after-stale-input)           | A list of labels added when the processing stale the pull request (multiline).                                                                         |                       |
+| [pull-request-remove-labels-after-stale](pull-requests/inputs/pull-request-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the pull request (multiline).                                                                       |                       |
 | [pull-request-add-labels-after-close](pull-requests/inputs/pull-request-add-labels-after-close-input)           | A list of labels added when the processing close the pull request (multiline).                                                                         |                       |
 | [pull-request-to-draft-instead-of-stale](pull-requests/inputs/pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false`               |
 | [pull-request-delete-branch-after-close](pull-requests/inputs/pull-request-delete-branch-after-close-input)     | Delete the branch when the processing close the pull request.                                                                                          | `false`               |
