--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -46,6 +46,7 @@ The list of all the pull requests inputs.
 | [pull-request-processing](pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`        |
 | [pull-request-close-reason](pull-request-close-reason-input)                               | The reason when closing a pull request (`completed` or `not planned`).                                                                                 | `not planned` |
 | [pull-request-add-labels-after-stale](pull-request-add-labels-after-stale-input)           | A list of labels added when the processing stale the pull request (multiline).                                                                         |               |
+| [pull-request-remove-labels-after-stale](pull-request-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the pull request (multiline).                                                                       |               |
 | [pull-request-add-labels-after-close](pull-request-add-labels-after-close-input)           | A list of labels added when the processing close the pull request (multiline).                                                                         |               |
 | [pull-request-to-draft-instead-of-stale](pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false`       |
 | [pull-request-delete-branch-after-close](pull-request-delete-branch-after-close-input)     | Delete the branch when the processing close the pull request.                                                                                          | `false`       |
