docs(statistics): fix a typo in wording in the statistics website page

--- a/documentation/docs/10-statistics.mdx
+++ b/documentation/docs/10-statistics.mdx
@@ -30,7 +30,7 @@ Issues statistics
 ├── Processed issues 28
 ├── Ignored issues   3
 └── Unaltered issues 25
-Pull rrequests statistics
+Pull requests statistics
 ├── Processed pull requests 5
 └── Ignored pull requests   5
 ```
