fix(prs): remove the input `pull-request-close-reason`
The GitHub API do not actually propose such feature.
Fixes #890.

--- a/documentation/docs/08-pull-requests/01-inputs/41-close-comment-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/41-close-comment-input.mdx
@@ -24,8 +24,7 @@ This can be useful if you wish to improve the communication and the process on h
 
 :::note
 
-You can also specify the reason for closing this pull request by using the [close reason input](pull-request-close-reason-input),
-add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
+You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
 and define the number of days before closing it by using the [days before close input](pull-request-days-before-close-input).
 
 :::
