--- a/documentation/docs/08-pull-requests/01-inputs/51-days-before-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/51-days-before-close-input.mdx
@@ -29,8 +29,7 @@ The pull request will be closed tomorrow if no update occur until then.
 
 :::info
 
-You can also specify the reason for closing this pull request by using the [close reason input](pull-request-close-reason-input),
-add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
+You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
 and add a comment to explain why it was closed by using the [close comment input](pull-request-close-comment-input).
 
 :::
