--- a/documentation/docs/08-pull-requests/01-inputs/73-add-labels-after-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/73-add-labels-after-close-input.mdx
@@ -31,8 +31,7 @@ If not, the GitHub API will throw an error.
 
 :::info
 
-You can also specify the reason for closing this pull request by using the [close reason input](pull-request-close-reason-input),
-add a comment to explain why it was closed by using the [close comment input](pull-request-close-comment-input)
+You can also add a comment to explain why it was closed by using the [close comment input](pull-request-close-comment-input)
 and define the number of days before closing it by using the [days before close input](pull-request-days-before-close-input).
 
 :::
