chore(docs): add new translation

--- a/documentation/i18n/fr/code.json
+++ b/documentation/i18n/fr/code.json
@@ -424,5 +424,9 @@
   "theme.SearchModal.placeholder": {
     "message": "Rechercher des docs",
     "description": "The placeholder of the input of the DocSearch pop-up modal"
+  },
+  "theme.tags.tagsPageTitle": {
+    "message": "Tags",
+    "description": "The title of the tag list page"
   }
 }
