feat(issues): add new input `issue-remove-labels-after-close`
When closing an issue, you can now remove some extra labels.
This might specifically handy if you want to remove the stale label to "clean" the closed issue.
Closes #859.

--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -47,3 +47,4 @@ The list of all issues the inputs.
 | [issue-add-labels-after-stale](issue-add-labels-after-stale-input)           | A list of labels added when the processing stale the issue (multiline).                                                                         |               |
 | [issue-remove-labels-after-stale](issue-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the issue (multiline).                                                                       |               |
 | [issue-add-labels-after-close](issue-add-labels-after-close-input)           | A list of labels added when the processing close the issue (multiline).                                                                         |               |
+| [issue-remove-labels-after-close](issue-remove-labels-after-close-input)     | A list of labels removed when the processing close the issue (multiline).                                                                       |               |
