--- a/documentation/docs/06-issues/01-inputs/41-close-comment-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/41-close-comment-input.mdx
@@ -25,7 +25,8 @@ This can be useful if you wish to improve the communication and the process on h
 :::info
 
 You can also specify the reason for closing this issue by using the [close reason input](issue-close-reason-input),
-add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input)
+add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input),
+remove labels onto it by using the [remove labels after close input](issue-remove-labels-after-close-input)
 and define the number of days before closing it by using the [days before close input](issue-days-before-close-input).
 
 :::
