--- a/documentation/docs/06-issues/01-inputs/51-days-before-close-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/51-days-before-close-input.mdx
@@ -30,7 +30,8 @@ The issue will be closed tomorrow if no update occur until then.
 :::info
 
 You can also specify the reason for closing this issue by using the [close reason input](issue-close-reason-input),
-add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input)
+add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input),
+remove labels onto it by using the [remove labels after close input](issue-remove-labels-after-close-input)
 and add a comment to explain why it was closed by using the [close comment input](issue-close-comment-input).
 
 :::
