--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -76,6 +76,7 @@ The list of all the inputs.
 | [issue-add-labels-after-stale](issues/inputs/issue-add-labels-after-stale-input)                                | A list of labels added when the processing stale the issue (multiline).                                                                                |                       |
 | [issue-remove-labels-after-stale](issues/inputs/issue-remove-labels-after-stale-input)                          | A list of labels removed when the processing stale the issue (multiline).                                                                              |                       |
 | [issue-add-labels-after-close](issues/inputs/issue-add-labels-after-close-input)                                | A list of labels added when the processing close the issue (multiline).                                                                                |                       |
+| [issue-remove-labels-after-close](issues/inputs/issue-remove-labels-after-close-input)                          | A list of labels removed when the processing close the issue (multiline).                                                                              |                       |
 | [pull-request-processing](pull-requests/inputs/pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`                |
 | [pull-request-add-labels-after-stale](pull-requests/inputs/pull-request-add-labels-after-stale-input)           | A list of labels added when the processing stale the pull request (multiline).                                                                         |                       |
 | [pull-request-remove-labels-after-stale](pull-requests/inputs/pull-request-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the pull request (multiline).                                                                       |                       |
