--- a/documentation/docs/06-issues/01-inputs/71-close-reason-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/71-close-reason-input.mdx
@@ -24,6 +24,7 @@ This input will let you define the closing reason used when an issue is closed d
 :::info
 
 You can also add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input),
+remove labels onto it by using the [remove labels after close input](issue-remove-labels-after-close-input),
 add a comment to explain why it was closed by using the [close comment input](issue-close-comment-input)
 and define the number of days before closing it by using the [days before close input](issue-days-before-close-input).
 
