feat(prs): add new input `pull-request-remove-labels-after-close`
When closing a pull request, you can now remove some extra labels.
This might specifically handy if you want to remove the stale label to "clean" the closed pull request.
Closes #859.

--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -47,5 +47,6 @@ The list of all the pull requests inputs.
 | [pull-request-add-labels-after-stale](pull-request-add-labels-after-stale-input)           | A list of labels added when the processing stale the pull request (multiline).                                                                         |         |
 | [pull-request-remove-labels-after-stale](pull-request-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the pull request (multiline).                                                                       |         |
 | [pull-request-add-labels-after-close](pull-request-add-labels-after-close-input)           | A list of labels added when the processing close the pull request (multiline).                                                                         |         |
+| [pull-request-remove-labels-after-close](pull-request-remove-labels-after-close-input)     | A list of labels removed when the processing close the pull request (multiline).                                                                       |         |
 | [pull-request-to-draft-instead-of-stale](pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false` |
 | [pull-request-delete-branch-after-close](pull-request-delete-branch-after-close-input)     | Delete the branch when the processing close the pull request.                                                                                          | `false` |
