--- a/documentation/docs/08-pull-requests/01-inputs/51-days-before-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/51-days-before-close-input.mdx
@@ -29,7 +29,8 @@ The pull request will be closed tomorrow if no update occur until then.
 
 :::info
 
-You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
+You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input),
+remove labels onto it by using the [remove labels after close input](pull-request-remove-labels-after-close-input)
 and add a comment to explain why it was closed by using the [close comment input](pull-request-close-comment-input).
 
 :::
