--- a/documentation/docs/08-pull-requests/01-inputs/41-close-comment-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/41-close-comment-input.mdx
@@ -24,7 +24,8 @@ This can be useful if you wish to improve the communication and the process on h
 
 :::note
 
-You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
+You can also add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input),
+remove labels onto it by using the [remove labels after close input](pull-request-remove-labels-after-close-input)
 and define the number of days before closing it by using the [days before close input](pull-request-days-before-close-input).
 
 :::
