--- a/documentation/docs/08-pull-requests/01-inputs/74-remove-labels-after-close-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/74-remove-labels-after-close-input.mdx
@@ -1,8 +1,8 @@
 ---
-id: pull-request-add-labels-after-close-input
-title: Add pull request labels after close input
+id: pull-request-remove-labels-after-close-input
+title: Remove pull request labels after close input
 description: |
-  All the information you need to know about the add pull request labels after close input.
+  All the information you need to know about the remove pull request labels after close input.
   Including a detailed description and an example.
 tags:
   - Pull requests
@@ -13,14 +13,14 @@ tags:
 
 ### Input {#input}
 
-Name: `pull-request-add-labels-after-close`  
+Name: `pull-request-remove-labels-after-close`  
 Type: `string[]`  
 Default value: `[]`
 
 ### Description {#description}
 
-This input will let you add extra labels when the processing close the pull requests.  
-This can be useful if you wish to easily add extra labels to improve your triage post-closing.
+This input will let you remove extra labels when the processing close the pull requests.  
+This can be useful if you wish to easily remove extra labels to improve your triage post-closing.
 
 :::caution
 
@@ -32,7 +32,7 @@ If not, the GitHub API will throw an error.
 :::info
 
 You can also add a comment to explain why it was closed by using the [close comment input](pull-request-close-comment-input),
-remove labels onto it by using the [remove labels after close input](pull-request-remove-labels-after-close-input)
+add labels onto it by using the [add labels after close input](pull-request-add-labels-after-close-input)
 and define the number of days before closing it by using the [days before close input](pull-request-days-before-close-input).
 
 :::
@@ -45,7 +45,7 @@ name: Stale
 id: stale
 uses: sonia-corporation/stale@latest
 with:
-  pull-request-add-labels-after-close: |
-    do not reopen
-    please-create if needed
+  pull-request-remove-labels-after-close: |
+    new author feedback
+    closing soon!
 ```
