--- a/documentation/docs/05-github-token-input.mdx
+++ b/documentation/docs/05-github-token-input.mdx
@@ -25,7 +25,7 @@ You can also read the [automatic token authentication](https://docs.github.com/e
 Based on your configuration, make sure to give the proper [permissions](https://docs.github.com/en/rest/reference/permissions-required-for-github-apps) to your GitHub token.  
 If not, you may end up having weird behaviours, where some data will be missing from the queries.
 
-Note that if you have unusual behaviours, a debug log is exposing the queried data from your issues and pull request.  
+Note that if you have unusual behaviours, a debug log is exposing the queried data from your issues and pull requests.  
 This may be very helpful to debug your workflow, before creating a [new issue](https://github.com/Sonia-corporation/stale/issues/new/choose).
 
 :::
