--- a/documentation/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/documentation/i18n/en/docusaurus-theme-classic/navbar.json
@@ -14,5 +14,9 @@
   "item.label.GitHub": {
     "message": "GitHub",
     "description": "Navbar item with label GitHub"
+  },
+  "logo.alt": {
+    "message": "Sonia stale action",
+    "description": "The alt text of navbar logo"
   }
 }
