feat(projects-v2): drop support for project cards and add support for projects v2 Note: a migration guide was [written](https://sonia-stale-action.vercel.app/docs/migrations/migration-to-projects-v2). BREAKING CHANGE: All inputs including the word "-card(s)" were renamed without it. For example, "issue-ignore-all-project-cards" is now called "issue-ignore-all-projects".

--- a/documentation/blog/2022-02-11-first-inclusive-input/index.mdx
+++ b/documentation/blog/2022-02-11-first-inclusive-input/index.mdx
@@ -15,14 +15,14 @@ The first input of the inclusive filtering kind is out!
 
 ## TL;DR {#tldr}
 
-The input [issue-only-any-project-cards](../docs/issues/inputs/issue-only-any-project-cards-input) is out!  
+The input [issue-only-any-projects](../docs/issues/inputs/issue-only-any-projects-input) is out!  
 You can now only process your issues when they are linked to a project.
 
 ## A bit of context {#a-bit-of-context}
 
 All the inputs added so far were useful to ignore all the items not having certain criteria.
 
-For example, the only inputs available to ignore the processing of issues for a project were the [issue-ignore-all-project-cards](../docs/issues/inputs/issue-ignore-all-project-cards-input) and the [issue-ignore-any-project-cards](../docs/issues/inputs/issue-ignore-any-project-cards-input) inputs.  
+For example, the only inputs available to ignore the processing of issues for a project were the [issue-ignore-all-projects](../docs/issues/inputs/issue-ignore-all-projects-input) and the [issue-ignore-any-projects](../docs/issues/inputs/issue-ignore-any-projects-input) inputs.  
 But what if you only wish to process issues that belongs to a specific project?  
 You simply couldn't!
 
@@ -31,7 +31,7 @@ Having inputs to reverse the logic to only process by using inclusive criteria w
 ## What is new? {#what-is-new}
 
 To tackle this issue and be able to only process issues that belongs to a specific project or to a specific list of projects, we needed a new input.  
-So, the input [issue-only-any-project-cards](../docs/issues/inputs/issue-only-any-project-cards-input) was created for this purpose.
+So, the input [issue-only-any-projects](../docs/issues/inputs/issue-only-any-projects-input) was created for this purpose.
 
 ## Why is that so important? {#why-is-that-so-important}
 
