--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -34,15 +34,15 @@ The list of all the inputs.
 | [pull-request-ignore-any-assignees](pull-requests/inputs/pull-request-ignore-any-assignees-input)               | Allow to ignore the processing of pull requests that contains one of those assignees (multiline).                                                      |                       |
 | [pull-request-only-with-assignees](pull-requests/inputs/pull-request-only-with-assignees-input)                 | Only allow the processing of pull requests that contains at least one assignee.                                                                        | `false`               |
 | [pull-request-only-any-assignees](pull-requests/inputs/pull-request-only-any-assignees-input)                   | Only allow the processing of pull requests that contains one of those assignees (multiline).                                                           |                       |
-| **Project cards**                                                                                               |                                                                                                                                                        |                       |
-| [issue-ignore-all-project-cards](issues/inputs/issue-ignore-all-project-cards-input)                            | Allow to ignore the processing of issues that contains any project cards.                                                                              | `false`               |
-| [issue-ignore-any-project-cards](issues/inputs/issue-ignore-any-project-cards-input)                            | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                         |                       |
-| [issue-only-with-project-cards](issues/inputs/issue-only-with-project-cards-input)                              | Only allow the processing of issues that contains at least one project card.                                                                           | `false`               |
-| [issue-only-any-project-cards](issues/inputs/issue-only-any-project-cards-input)                                | Only allow the processing of issues that contains one of those project cards (multiline).                                                              |                       |
-| [pull-request-ignore-all-project-cards](pull-requests/inputs/pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false`               |
-| [pull-request-ignore-any-project-cards](pull-requests/inputs/pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |                       |
-| [pull-request-only-with-project-cards](pull-requests/inputs/pull-request-only-with-project-cards-input)         | Only allow the processing of pull requests that contains at least one project card.                                                                    | `false`               |
-| [pull-request-only-any-project-cards](pull-requests/inputs/pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |                       |
+| **Projects**                                                                                                    |                                                                                                                                                        |                       |
+| [issue-ignore-all-projects](issues/inputs/issue-ignore-all-projects-input)                                      | Allow to ignore the processing of issues that contains any projects.                                                                                   | `false`               |
+| [issue-ignore-any-projects](issues/inputs/issue-ignore-any-projects-input)                                      | Allow to ignore the processing of issues that contains one of those projects (multiline).                                                              |                       |
+| [issue-only-with-projects](issues/inputs/issue-only-with-projects-input)                                        | Only allow the processing of issues that contains at least one project.                                                                                | `false`               |
+| [issue-only-any-projects](issues/inputs/issue-only-any-projects-input)                                          | Only allow the processing of issues that contains one of those projects (multiline).                                                                   |                       |
+| [pull-request-ignore-all-projects](pull-requests/inputs/pull-request-ignore-all-projects-input)                 | Allow to ignore the processing of pull requests that contains any projects.                                                                            | `false`               |
+| [pull-request-ignore-any-projects](pull-requests/inputs/pull-request-ignore-any-projects-input)                 | Allow to ignore the processing of pull requests that contains one of those projects (multiline).                                                       |                       |
+| [pull-request-only-with-projects](pull-requests/inputs/pull-request-only-with-projects-input)                   | Only allow the processing of pull requests that contains at least one project.                                                                         | `false`               |
+| [pull-request-only-any-projects](pull-requests/inputs/pull-request-only-any-projects-input)                     | Only allow the processing of pull requests that contains one of those projects (multiline).                                                            |                       |
 | **Milestones**                                                                                                  |                                                                                                                                                        |                       |
 | [issue-ignore-all-milestones](issues/inputs/issue-ignore-all-milestones-input)                                  | Allow to ignore the processing of issues that contains any milestones.                                                                                 | `false`               |
 | [issue-ignore-any-milestones](issues/inputs/issue-ignore-any-milestones-input)                                  | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                            |                       |
