--- a/documentation/docs/09-examples/02-multiple-cron.mdx
+++ b/documentation/docs/09-examples/02-multiple-cron.mdx
@@ -31,7 +31,7 @@ jobs:
   id: stale
   uses: sonia-corporation/stale@latest
   with:
-    issue-only-any-project-cards: project-x
+    issue-only-any-projects: project-x
     issue-days-before-stale: 20
 ```
 
@@ -45,6 +45,6 @@ jobs:
   id: stale
   uses: sonia-corporation/stale@latest
   with:
-    issue-only-any-project-cards: project-y
+    issue-only-any-projects: project-y
     issue-days-before-stale: 50
 ```
