--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -21,11 +21,11 @@ The list of all issues the inputs.
 | [issue-ignore-any-assignees](issue-ignore-any-assignees-input)               | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |               |
 | [issue-only-with-assignees](issue-only-with-assignees-input)                 | Only allow the processing of issues that contains at least one assignee.                                                                        | `false`       |
 | [issue-only-any-assignees](issue-only-any-assignees-input)                   | Only allow the processing of issues that contains one of those assignees (multiline).                                                           |               |
-| **Project cards**                                                            |                                                                                                                                                 |               |
-| [issue-ignore-all-project-cards](issue-ignore-all-project-cards-input)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false`       |
-| [issue-ignore-any-project-cards](issue-ignore-any-project-cards-input)       | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                  |               |
-| [issue-only-with-project-cards](issue-only-with-project-cards-input)         | Only allow the processing of issues that contains at least one project card.                                                                    | `false`       |
-| [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |               |
+| **Projects**                                                                 |                                                                                                                                                 |               |
+| [issue-ignore-all-projects](issue-ignore-all-projects-input)                 | Allow to ignore the processing of issues that contains any projects.                                                                            | `false`       |
+| [issue-ignore-any-projects](issue-ignore-any-projects-input)                 | Allow to ignore the processing of issues that contains one of those projects (multiline).                                                       |               |
+| [issue-only-with-projects](issue-only-with-projects-input)                   | Only allow the processing of issues that contains at least one project.                                                                         | `false`       |
+| [issue-only-any-projects](issue-only-any-projects-input)                     | Only allow the processing of issues that contains one of those projects (multiline).                                                            |               |
 | **Milestones**                                                               |                                                                                                                                                 |               |
 | [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false`       |
 | [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |               |
