--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -21,11 +21,11 @@ The list of all the pull requests inputs.
 | [pull-request-ignore-any-assignees](pull-request-ignore-any-assignees-input)               | Allow to ignore the processing of pull requests that contains one of those assignees (multiline).                                                      |         |
 | [pull-request-only-with-assignees](pull-request-only-with-assignees-input)                 | Only allow the processing of pull requests that contains at least one assignee.                                                                        | `false` |
 | [pull-request-only-any-assignees](pull-request-only-any-assignees-input)                   | Only allow the processing of pull requests that contains one of those assignees (multiline).                                                           |         |
-| **Project cards**                                                                          |                                                                                                                                                        |         |
-| [pull-request-ignore-all-project-cards](pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false` |
-| [pull-request-ignore-any-project-cards](pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |         |
-| [pull-request-only-with-project-cards](pull-request-only-with-project-cards-input)         | Only allow the processing of pull requests that contains at least one project card.                                                                    | `false` |
-| [pull-request-only-any-project-cards](pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |         |
+| **Projects**                                                                               |                                                                                                                                                        |         |
+| [pull-request-ignore-all-projects](pull-request-ignore-all-projects-input)                 | Allow to ignore the processing of pull requests that contains any projects.                                                                            | `false` |
+| [pull-request-ignore-any-projects](pull-request-ignore-any-projects-input)                 | Allow to ignore the processing of pull requests that contains one of those projects (multiline).                                                       |         |
+| [pull-request-only-with-projects](pull-request-only-with-projects-input)                   | Only allow the processing of pull requests that contains at least one project.                                                                         | `false` |
+| [pull-request-only-any-projects](pull-request-only-any-projects-input)                     | Only allow the processing of pull requests that contains one of those projects (multiline).                                                            |         |
 | **Milestones**                                                                             |                                                                                                                                                        |         |
 | [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false` |
 | [pull-request-ignore-any-milestones](pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |         |
